--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calculator",
   "version": "0.1.0",
   "license": "MIT",
-  "homepage": "http://ahfarmer.github.io/calculator",
+  "homepage": "http://teste-site.s3-website-us-west-1.amazonaws.com/",
   "devDependencies": {
     "chai": "^4.2.0",
     "gh-pages": "^2.0.1",
